--- a/contact_us.html
+++ b/contact_us.html
@@ -450,17 +450,19 @@
 <!-- Animated background particles -->
 <div class="bg-particles" id="particles"></div>
 
+
 <header>
   <img src="images/logo.png" alt="EduPro Logo" class="logo">
   <h1>EduPro Tech Support</h1>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="files/Troubleshooting_Questions.pdf">Troubleshooting</a></li>
+
       <li><a href="https://forms.office.com/pages/responsepage.aspx?id=RI8M4Wn0j0S8DdeBKI_wG7yJFRG5AVhPre8NqnakxzRUNktWNkZCTzJBN1RTNVNFR0lSME1ZM0xSMi4u&route=shorturl">Call Log</a></li>
-      <li><a href="files/Asset_Register.pdf">Assets Procedure</a></li>
       <li><a href="files/Escalation_Procedure.pdf">Escalation Procedure</a></li>
+<li><a href="files/Troubleshooting_Questions.pdf">Troubleshooting</a></li>
+<li><a href="files/Asset_Register.pdf">Registration</a></li>
+<li><a href="about.html" >About</a></li>
       <li><a href="contact_us.html" class="active">Contact</a></li>
     </ul>
   </nav>
@@ -600,7 +602,7 @@
   <div class="map-section">
     <h3>Our Location</h3>
     <div class="map-placeholder">
-      Interactive Map - Johannesburg Office Location
+     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d114736.4851116672!2d28.048068774490567!3d-26.016695183731468!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e950cc26cdaab41%3A0x7aa27f691eebc1bf!2sB2E%20Technologies!5e0!3m2!1sen!2sza!4v1760958270452!5m2!1sen!2sza" width="1090" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
   </div>
 
