--- a/index.html
+++ b/index.html
@@ -395,18 +395,20 @@ footer p {
 <!-- Animated background particles -->
 <div class="bg-particles" id="particles"></div>
 
+
 <header>
   <img src="images/logo.png" alt="EduPro Logo" class="logo">
   <h1>EduPro Tech Support</h1>
   <nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="files/Troubleshooting_Questions.pdf">Troubleshooting</a></li>
+      <li><a href="index.html" class="active">Home</a></li>
+
       <li><a href="https://forms.office.com/pages/responsepage.aspx?id=RI8M4Wn0j0S8DdeBKI_wG7yJFRG5AVhPre8NqnakxzRUNktWNkZCTzJBN1RTNVNFR0lSME1ZM0xSMi4u&route=shorturl">Call Log</a></li>
-      <li><a href="files/Asset_Register.pdf">Assets Procedure</a></li>
       <li><a href="files/Escalation_Procedure.pdf">Escalation Procedure</a></li>
-      <li><a href="contact_us.html" class="active">Contact</a></li>
+<li><a href="files/Troubleshooting_Questions.pdf">Troubleshooting</a></li>
+<li><a href="files/Asset_Register.pdf">Registration</a></li>
+<li><a href="about.html" >About</a></li>
+      <li><a href="contact_us.html">Contact</a></li>
     </ul>
   </nav>
 </header>
@@ -455,7 +457,7 @@ footer p {
   <section class="cta-section">
     <h3>Ready to Enhance Your IT Experience?</h3>
     <p>Contact us today for a consultation and discover how EduPro can transform your technology infrastructure.</p>
-    <a href="form.html" class="cta-button">Get Support Now</a>
+    <a href="https://forms.office.com/pages/responsepage.aspx?id=RI8M4Wn0j0S8DdeBKI_wG7yJFRG5AVhPre8NqnakxzRUNktWNkZCTzJBN1RTNVNFR0lSME1ZM0xSMi4u&route=shorturl" class="cta-button">Get Support Now</a>
   </section>
 </main>
 
