--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@ footer p {
       <li><a href="https://forms.office.com/pages/responsepage.aspx?id=RI8M4Wn0j0S8DdeBKI_wG7yJFRG5AVhPre8NqnakxzRUNktWNkZCTzJBN1RTNVNFR0lSME1ZM0xSMi4u&route=shorturl">Call Log</a></li>
       <li><a href="files/Escalation_Procedure.pdf">Escalation Procedure</a></li>
 <li><a href="files/Troubleshooting_Questions.pdf">Troubleshooting</a></li>
-<li><a href="files/Asset_Register.pdf">Registration</a></li>
+<li><a href="files/Asset_Register.pdf">Asset Register</a></li>
 <li><a href="about.html" >About</a></li>
       <li><a href="contact_us.html">Contact</a></li>
     </ul>
