--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@ footer p {
 
 
 <main>
-  <section class="hero">
+  <section class="hero">https://forms.office.com/pages/responsepage.aspx?id=RI8M4Wn0j0S8DdeBKI_wG2LzrjrzfBVPuIDmhaKKYL9UOUYzQzlWRFY1MVNaQkNTSTFYUktFWjdMWC4u&origin=lprLink&route=shorturl
     <div class="typing-container">
       <h2 class="typing-text">Welcome to EduPro Tech Support</h2>
     </div>
