--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ footer p {
   <section class="cta-section">
     <h3>Ready to Enhance Your IT Experience?</h3>
     <p>Contact us today for a consultation and discover how EduPro can transform your technology infrastructure.</p>
-    <a href="https://forms.office.com/pages/responsepage.aspx?id=RI8M4Wn0j0S8DdeBKI_wG7yJFRG5AVhPre8NqnakxzRUNktWNkZCTzJBN1RTNVNFR0lSME1ZM0xSMi4u&route=shorturl" class="cta-button">Get Support Now</a>
+    <a href="https://forms.office.com/pages/responsepage.aspx?id=RI8M4Wn0j0S8DdeBKI_wG2LzrjrzfBVPuIDmhaKKYL9UOUYzQzlWRFY1MVNaQkNTSTFYUktFWjdMWC4u&origin=lprLink&route=shorturl" class="cta-button">Get Support Now</a>
   </section>
 </main>
 
